# devussy

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .roomodes  AGENTS.md  CHANGELOG.md  COMPLETE.md  CONTRIBUTING.md  DEVPLAN_FOR_NEXT_AGENT.md  DEVUSSYLOGO.MD  DEVUSSYPLAN.md  DOCS_UPDATE_SUMMARY.md  DOCS_UPDATE_SUMMARY_OCT22.md  FIXESHANDOFF.MD  HANDOFF.md  HANDOFF_FOR_NEXT_AGENT.md  HANDOFF_backup_phase20.md  INTERACTIVE_IMPLEMENTATION.md  IRCPLAN.MD  ITERATIVE_WORKFLOW_IMPLEMENTATION.md  LICENSE  MANIFEST.in  MULTI_LLM_GUIDE.md  MULTI_LLM_QUICKSTART.md  NEW-REPO-INSTRUCTIONS.md  PHASE_20_PROGRESS.md  QUICKSTART_CONFIG.md  QUICK_REF.md  README.md  REQUESTY_API_FIX_GUIDE.md  SESSION_COMPLETE_CONFIG_UI.md  SESSION_SUMMARY_CONFIG_PLANNING.md  SESSION_SUMMARY_CONFIG_SYSTEM.md  SESSION_SUMMARY_OCT20_NIGHT.md  START_HERE.md  STREAMING_GUIDE.md  WARP.md  WEB_INTERFACE_GUIDE.md  WEB_INTERFACE_SUMMARY.md  (+44 more)
DevDocs/: DocumentationCondensed_DazSprint_001.md  JINJA_CONTEXT_MAP.md  JINJA_CONTEXT_SCHEMA.md  JINJA_GAPS.md  JINJA_UPGRADE_PROGRESS.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_CONTEXT_BUILDER_PLAN.md  TEMPLATE_DESIGN_NOTES.md  emoji_replacement_map.txt
adaptive_llm_implementation/: HOLISTIC_SCORING_UPGRADE.md  PHASE_1_COMPLEXITY.md  PHASE_1_HARDENED.md  PHASE_2_HARDENED.md  PHASE_2_SANITY_REVIEW.md  PHASE_3_CORRECTION.md  PHASE_3_HARDENED.md  README.md  RESPONSE_1_COMPLEXITY.md  RESPONSE_2_SANITY_REVIEW.md  RESPONSE_3_CORRECTION.md
archive/: README.md  START_HERE.md  test_fixed_single_window.py  test_no_duplicate_streaming.py  test_requesty_streaming.py  test_single_window.py
config/: config.yaml  questions.yaml
devarchive/: DEVUSSYPLAN.md  FIXX.MD  INTERACTIVE_FIXES_SUMMARY.md  RELEASE-01-SUMMARY.md  SINGLE_WINDOW_MODE.md  devplan.md.bak  devussy-complete-plan.md  devussyhandoff.md  handoff-cleanup-guide.md  setup-new-repo.ps1  sitecustomize.py
devussy-web/: DEPLOYMENT.md  DEPLOYMENT_NOTES.md  DEVPLAN_VPS.md  FINAL_STATUS.md  FIXES_2025-11-26.md  QUICK_START.md  README.md  README_VERCEL.md  README_VPS.md  SESSION_HANDOFF.md  VPS_WORKFLOW.md  auto_scroll_fix.md  concurrency_fix.md  debug_irc.py  debugging_changes.md  dev_server.py  docker-compose.apps.generated.yml  docker-compose.prod.yml  docker-compose.yml  execution_debugging.md  execution_loop_final_fix.md  execution_loop_fix.md  final_fixes.md  fix-scroll.patch  frontend.Dockerfile  handoff.md  handoff_next_model.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  phase_card_content_fix.md  requirements.txt  session_completion.md  sse_newline_fix.md  start-dev-servers.ps1  streaming_display_fix.md  streaming_implementation_fix.md  task.md  (+3 more)
docs/: ARCHITECTURE.md  EXAMPLES.md  PHASE_10_STATUS.md  PROVIDERS.md  TESTING.md  devplan-phase-updates.md  project_design.md  rerun_commands.txt  session-2-summary.md  session-3-summary.md  session-5-summary.md  terminal-ui-library-decision.md  update-ritual.md  update_log.md
frontend/: README.md  index.html  package.json  tailwind.config.js
output_0/: devplan.md.tmp  handoff_prompt.md  project_design.md  rerun_commands.txt
output_1/: devplan.md  devplan.md.tmp  handoff_prompt.md  project_design.md  rerun_commands.txt
planning-archive/: frontend_implementation_plan.md  phase1.md  (+2 more)
(+478 files in other folders)
